<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_passwd" tools:context=".PasswdActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/master_passwd_editText"
                android:textColor="#9f9f9f"
                android:hint="@string/master_passwd"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/url_editText"
                android:textColor="#949494"
                android:hint="@string/url"
                android:inputType="text" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/length_editText"
                android:textColor="#989898"
                android:hint="@string/length"
                android:inputType="number" />

            <Button
                android:layout_width="117dp"
                android:layout_height="36dp"
                android:text="@string/passwd_button"
                android:id="@+id/passwd_button"
                android:layout_gravity="right"
                android:background="#4d4d4d"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="#dfdfdf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:background="#ededed">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/passwd"
                    android:id="@+id/textView"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwd_editText"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:focusable="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_passwd"
                    android:id="@+id/show_checkBox"
                    android:checked="false"
                    android:layout_below="@+id/passwd_editText"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/md5sum"
                    android:id="@+id/textView2"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/md5sum_textView"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/textView"
                    android:layout_toRightOf="@+id/textView" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
